# sdinsight

./: .clang_format  CMakeLists.txt  README.md
src/: main.cpp  mmc_utils.cpp  mmc_utils.hpp  smart_reader.cpp  smart_reader.hpp  smart_reader_adata.cpp  smart_reader_adata.hpp  smart_reader_adata_by_transcend.cpp  smart_reader_adata_by_transcend.hpp  smart_reader_apacer.cpp  smart_reader_apacer.hpp  smart_reader_atp.cpp  smart_reader_atp.hpp  smart_reader_longsys_0x1.cpp  smart_reader_longsys_0x1.hpp  smart_reader_longsys_m9h.cpp  smart_reader_longsys_m9h.hpp  smart_reader_longsys_mps.cpp  smart_reader_longsys_mps.hpp  smart_reader_micron.cpp  smart_reader_micron.hpp  smart_reader_sandisk.cpp  smart_reader_sandisk.hpp  smart_reader_swissbit.cpp  smart_reader_swissbit.hpp  smart_reader_transcend.cpp  smart_reader_transcend.hpp  smi_flash_id.cpp  smi_flash_id.hpp
